# editrest

./: .gitignore  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/actions/docker/: action.yml
.github/actions/pypi-upload/: action.yml
.github/actions/pytest/: action.yml
.github/workflows/: branch.yml  main.yml  tag.yml
cover/: d_092a68bb319c43f1___init___py.html  d_092a68bb319c43f1_main_py.html  d_092a68bb319c43f1_version_py.html  index.html  status.json
docker/: Dockerfile
editrest/: main.py
example/: db.json
tests/: test_cli.py  test_encode.py  test_serv.py
