[metadata]
name = editrest
version = attr: editrest.version.VERSION
url = https://github.com/wtnb75/editreste
author = Watanebe Takashi
author_email = wtnb75@gmail.com
license = MIT
license_file = LICENSE
description = REST edit: GET + vi + PUT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Libraries :: Python Modules
  Programming Language :: Python :: 3

[options]
zip_safe = True
packages = find:

[options.entry_points]
console_scripts =
  editrest=editrest.main:cli
